# linux-clipboard-history

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
packaging/: linux-clipboard-history.desktop  systemd-user.service
packaging/appimage/: README.md
packaging/deb/: build-deb.sh  control  postinst
src/: app.rs  main.rs
src/clipboard/: mod.rs  monitor.rs  paste.rs  wayland.rs  x11.rs
src/config/: settings.rs
src/db/: migrations.rs  mod.rs  models.rs
src/shortcuts/: global_hotkey.rs
src/ui/: mod.rs  popup.rs  settings.rs  tray.rs
src/utils/: hashing.rs  mod.rs  paths.rs
tests/: cli.rs
