[package]
name = "linux-clipboard-history"
version = "0.1.0"
edition = "2021"
description = "A Windows 11-style clipboard history manager for Linux"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
gtk = { package = "gtk4", version = "0.9", features = ["v4_6"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

[profile.release]
strip = true
lto = "thin"
